docs/tests/typing/bad/testfile-return-2.cpp

class S { public: int a; };
int f() { S s; return s; }
int main() { }
